--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/op-node
+            ghcr.io/${{ github.repository_owner }}/optimism/op-node
           tags: |
             type=ref,event=branch
             type=ref,event=tag
@@ -63,7 +63,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/op-batcher
+            ghcr.io/${{ github.repository_owner }}/optimism/op-batcher
           tags: |
             type=ref,event=branch
             type=ref,event=tag
@@ -98,7 +98,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/op-proposer
+            ghcr.io/${{ github.repository_owner }}/optimism/op-proposer
           tags: |
             type=ref,event=branch
             type=ref,event=tag
